Minor fix to align the WPA content of the Publish tab

--- a/app/styles/_modules/_m-generator.scss
+++ b/app/styles/_modules/_m-generator.scss
@@ -530,7 +530,7 @@ ul.generator-tabs li.active{
   vertical-align: top;
   border-right: 1px solid #cecece;
   padding-right: 1rem;
-  min-height: 14rem;
+  min-height: 15rem;
   padding-left: 1rem;
 }
 .publish-header > div:nth-last-child(1) {
